[tool.poetry]
name = "elum-optim"
version = "0.1.0"
description = ""
authors = ["Manon Fouquet <manon.fouquet@elum-energy.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"
jupyter = "^1.1.1"
pyomo = "^6.8.2"
pandas = "^2.2.3"
matplotlib = "^3.10.0"
pre-commit = "^4.0.1"
pylint = "^3.3.3"


[tool.poetry.group.dev.dependencies]
black = "^24.10.0"
flake8 = "^7.1.1"
isort = "^5.13.2"
mypy = "^1.14.1"
pylint = "^3.3.3"
pre-commit = "^4.0.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
